# ipv6thing

./: .gitignore  README.md  pyproject.toml
ipv6thing/: __init__.py  __init__.pyi
tests/: test_ipv6thing.py
